# mi_sphere_metadata

./: .flake8  .gitignore  .pylintrc  Makefile  lint.sh  mi_sphere_metadata.py  mi_sphere_orientation.py  setup.cfg
mi_sphere_metadata/: metadata.py
tests/: test_main.py
