[metadata]
name = mi_sphere_metadata
version = 0.0.2

[options]
py_modules =
    mi_sphere_metadata

[options.entry_points]
console_scripts =
    mi_sphere_metadata = mi_sphere_metadata:main

[options.extras_require]
test =
    black
    pylint
    flake8
    flake8-import-order
    mypy
    types-setuptools
    pytest
