[metadata]
name = mi_sphere_metadata
version = 0.0.4

[options]
packages = find:

[options.entry_points]
console_scripts =
    mi_sphere_metadata = mi_sphere_metadata.metadata:main

[options.package_data]
mi_sphere_metadata =
    py.typed

[options.extras_require]
test =
    black
    pylint
    flake8<6.0
    flake8-import-order
    mypy
    types-setuptools
    pytest
